baking with OpenCL and CPU have slightly different brightness #50937

Closed
opened 2017-03-13 23:38:53 +01:00 by mathieu menuet · 7 comments

System Information
Windows 7 RX480, 17.3.1

Blender Version
Broken: e8021f5

Short description of error
When baking with GPU, the brightness differs a bit from CPU baking.

Exact steps for others to reproduce the error
Open attached file, bake once with CPU, once with GPU (OpenCL)
bug bake v2.blend
CPU look like that:
bug bake cpu.png
GPU like that:
bug bake gpu.png

**System Information** Windows 7 RX480, 17.3.1 **Blender Version** Broken: e8021f5 **Short description of error** When baking with GPU, the brightness differs a bit from CPU baking. **Exact steps for others to reproduce the error** Open attached file, bake once with CPU, once with GPU (OpenCL) [bug bake v2.blend](https://archive.blender.org/developer/F508658/bug_bake_v2.blend) CPU look like that: ![bug bake cpu.png](https://archive.blender.org/developer/F508659/bug_bake_cpu.png) GPU like that: ![bug bake gpu.png](https://archive.blender.org/developer/F508661/bug_bake_gpu.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Added subscribers: @nirved-1, @Sergey

Added subscribers: @nirved-1, @Sergey
Hristo Gueorguiev was assigned by Sergey Sharybin 2017-05-15 16:05:23 +02:00

@nirved-1, do you mind having a look here? Thanks!

@nirved-1, do you mind having a look here? Thanks!

This issue was referenced by blender/cycles@6d1daf2f27

This issue was referenced by blender/cycles@6d1daf2f27716d702f1ec7a8302dc6cb76fa0ab3

This issue was referenced by 40e6f65ea1

This issue was referenced by 40e6f65ea12ae031c06f7b24c6868c71845f899c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50937
No description provided.