Fix T50937: baking with OpenCL and CPU have slightly different brightness

OpenCL baking with SSS and Volume are not supported.